# anarchy-a

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  anarchy-s.c  anarchy_s-1.0.0-py3-none-any.whl  index.html  pyproject.toml  release.yml
.github/workflows/: docker-deploy.yml  python-publish.yml  static.yml
anarchy_a/: __init__.py
src/: anarchy-a.c  anarchy-s.c
