[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anarchy-s"
version = "1.0.0"
description = "Draw the Circle-A anarchy symbol in your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["terminal", "anarchy", "circle-a", "ascii", "animation", "cli", "punk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Games/Entertainment",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/fourzerosix/anarchy-s"
"Bug Tracker" = "https://github.com/fourzerosix/anarchy-s/issues"
Wikipedia = "https://en.wikipedia.org/wiki/Anarchist_symbolism"

[project.scripts]
anarchy-s = "anarchy_s:main"

[tool.setuptools.packages.find]
where = ["python"]
include = ["anarchy_s*"]

[tool.setuptools.package-data]
anarchy_s = ["*.c"]
